crates/reap-feed/tests/ui/private_login_bootstrap_is_linear.stderr
error[E0277]: the trait bound `PrivateLoginBootstrap: Clone` is not satisfied
 --> tests/ui/private_login_bootstrap_is_linear.rs:6:21
  |
6 |     require_clone::<PrivateLoginBootstrap>();
  |                     ^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `PrivateLoginBootstrap`
  |
note: required by a bound in `require_clone`
 --> tests/ui/private_login_bootstrap_is_linear.rs:3:21
  |
3 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`
