crates/reap-feed/tests/ui/private_login_bootstrap_is_linear.rs
use reap_feed::PrivateLoginBootstrap;

fn require_clone<T: Clone>() {}

fn main() {
    require_clone::<PrivateLoginBootstrap>();
}
